--- a/style.css
+++ b/style.css
@@ -325,6 +325,10 @@ hr{
     .item-description{
         padding: 10px 20px;
     }
+    .popup-bar2{
+        
+        bottom: 160px;
+        
     /* ------------------------------------- */
     footer{
         padding: 50px 0;
