--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ hr{
 }
 /* ---------------------Card End----------------------- */
 .story-section{
-    margin: 50px 0;
+    margin-top: 50px;
     padding: 50px 10px;
     background-image: 
                linear-gradient(
@@ -328,7 +328,7 @@ hr{
     .popup-bar2{
         
         bottom: 160px;
-        
+    }
     /* ------------------------------------- */
     footer{
         padding: 50px 0;
@@ -336,12 +336,13 @@ hr{
      }
     
     .footer-container{
+        display: flex;
         flex-direction: column;
         
     }
     .box{
         padding-left: 50px;
         width: 100%;
-        margin: 0;
+        margin-left: 0;
     }
 }
